--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Exchange Rate Calculator</title>
+    <title>Book Store</title>
+    <!-- FontAwesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- Normalize CSS -->
     <link rel="stylesheet" href="./styles/normalize.css" />
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-
+    <!-- Custom Script -->
     <script src="./scripts/script.js"></script>
   </body>
 </html>
