--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
+    <!-- Navbar Start-->
+    <nav class="navbar">
+      <div class="navbar-center">
+        <span class="nav-icon">
+          <i class="fas fa-bars"></i>
+        </span>
+        <div class="navbar-brand">
+          Book <span class="navbar-brand-title">Store</span>
+        </div>
+        <div class="btn-cart">
+          <span class="nav-icon">
+            <i class="fas fa-cart-plus"></i>
+          </span>
+          <div class="cart-items">0</div>
+        </div>
+      </div>
+    </nav>
+    <!-- Navbar End -->
     <!-- Custom Script -->
     <script src="./scripts/script.js"></script>
   </body>
