product section completed

--- a/index.html
+++ b/index.html
@@ -37,6 +37,40 @@
       </div>
     </nav>
     <!-- Navbar End -->
+    <!-- Hero Start -->
+    <header class="hero">
+      <div class="banner">
+        <h1 class="banner-title">My Book Store</h1>
+        <button class="btn-banner">Show Now</button>
+      </div>
+    </header>
+    <!-- Hero End -->
+    <!-- Products Starts -->
+    <section class="products">
+      <div class="section-title">
+        <h2>Books Collection</h2>
+      </div>
+      <div class="products-center">
+        <!-- Single Product Start-->
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="https://rukminim2.flixcart.com/image/832/832/jucz98w0/book/0/8/1/my-first-100-animals-and-birds-original-imaffgegd2qqhequ.jpeg?q=70"
+              alt="Animals and Birds"
+              class="product-img"
+            />
+            <button class="product-btn-cart" data-id="1">
+              <i class="fas fa-shopping-cart"></i>add to cart
+            </button>
+          </div>
+          <h3>Animals and Birds</h3>
+          <h4>₹399</h4>
+        </article>
+        <!-- Single Product End-->
+      </div>
+    </section>
+    <!-- Products End -->
+
     <!-- Custom Script -->
     <script src="./scripts/script.js"></script>
   </body>
