--- a/index.html
+++ b/index.html
@@ -70,7 +70,33 @@
       </div>
     </section>
     <!-- Products End -->
-
+    <!-- Cart Start-->
+    <div class="cart-overlay">
+      <div class="cart">
+        <span class="cart-close"><i class="far fa-window-close"></i></span>
+        <h2>Your cart</h2>
+        <div class="cart-content">
+          <!-- cart Item -->
+          <div class="cart-item">
+            <img
+              src="https://rukminim2.flixcart.com/image/832/832/jucz98w0/book/0/8/1/my-first-100-animals-and-birds-original-imaffgegd2qqhequ.jpeg?q=70"
+              alt="Animals and Birds"
+            />
+            <div>
+              <h4>Animals and Birds</h4>
+              <h5>₹399</h5>
+              <span class="remove-item">remove</span>
+            </div>
+            <div>
+              <i class="fa-solid fa-chevron-up"></i>
+              <p class="item-amount">1</p>
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- cart End -->
     <!-- Custom Script -->
     <script src="./scripts/script.js"></script>
   </body>
